refaktorer prismodeller til å benytte seg av samme skjema-template
